--- a/Credential Access/LsarSetSecret Password Change/LsarSetSecret_key_creation.yml
+++ b/Credential Access/LsarSetSecret Password Change/LsarSetSecret_key_creation.yml
@@ -1,7 +1,7 @@
 title:  LsarSetSecret_key_creation
 id: 
 status: experimental
-description: Modification of the Windows registry, specifically the creation and setting of registry keys and values associated with machine account passwords. 
+description: The key CREATION event of modification of the Windows registry values associated with machine account passwords. 
 author: Michael Vilshin
 date: 06/26/2024
 #modified: 
